--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "homepage": "https://christophercarrollsmith.com",
   "name": "bookings-site",
   "private": false,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "echo christophercarrollsmith.com > ./dist/CNAME && gh-pages -d dist",
     "build": "vite build",
     "preview": "vite preview"
   },
