--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -5,14 +5,14 @@
       {
         "title": "Furn-E",
         "url": "https://github.com/TeamZombies/furne_frontend",
-        "description": "Interior design image generator with product image search",
+        "description": "Interior design AI image generator with product image search",
         "img": "furne-desktop.jpg",
         "icon-overlay": "AECTech-ribbon-optimized.svg"
       },
       {
         "title": "SessionScribe",
         "url": "https://github.com/chriscarrollsmith/session-scribe",
-        "description": "Transcribe-to-print pipeline",
+        "description": "AI transcribe-to-print pipeline",
         "img": "sessionscribe-desktop.png",
         "icon-overlay": "Epson-ribbon-optimized.svg"
       },
@@ -38,9 +38,9 @@
         "description": "Python and R client libraries for working with the International Monetary Fund Data API"
       },
       {
-        "title": "RSS Fetch Action",
-        "url": "https://github.com/Promptly-Technologies-LLC/rss-fetch-action",
-        "description": "Javascript Github action for RSS and Atom blog feed syndication"
+        "title": "dir-diary",
+        "url": "https://github.com/Promptly-Technologies-LLC/dir-diary",
+        "description": "AI-powered project folder summarization and documentation tool"
       }
     ]
   }
