--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "deploy": "echo christophercarrollsmith.com > ./dist/CNAME && gh-pages -d dist",
+    "cname": "echo christophercarrollsmith.com > ./dist/CNAME",
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview"
   },
   "dependencies": {
