--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
         run: echo ${{ steps.check.outputs.stripped_homepage }} > ./dist/CNAME
 
       - name: Deploy
-        run: 
+        run: |
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
           npm run deploy
