--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "convertkit-react": "^1.5.5",
     "react": "^18.2.0",
     "react-calendly": "^4.1.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
