--- a/src/data/projectfeature.json
+++ b/src/data/projectfeature.json
@@ -3,5 +3,5 @@
   "landscapeImage": {"alt": "", "src": ""},
   "callToAction": "Your AI text-to-speech companion, created by Christopher Smith: try <a href='https://scribert.com'>Scribert</a> today with promo code 'NEWALPHAUSER' and get 100% off your first month!",
   "buttonText": "Sign up",
-  "buttonUrl": "https://www.scribert.com/signin/password_signin"
+  "buttonUrl": "https://www.scribert.com/signin/signup"
 }
