--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.6.0",
     "@formspree/react": "^2.5.1",
     "convertkit-react": "^1.5.5",
     "react": "^18.2.0",
