--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "devDependencies": {
     "@astrojs/react": "^4.4.1",
+    "@types/node": "^24.10.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.0.0",
     "astro": "^5.15.3",
     "eslint": "^8.38.0",
@@ -32,6 +34,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "gh-pages": "^5.0.0",
+    "typescript": "^5.9.3",
     "vite": "^4.3.2"
   }
 }
