--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@formspree/react": "^2.5.1",
     "convertkit-react": "^1.5.5",
     "image-size": "^2.0.2",
+    "prismjs": "^1.30.0",
     "react": "^18.2.0",
     "react-calendly": "^4.1.1",
     "react-dom": "^18.2.0",
