--- a/.github/workflows/lighthouse-ci.yml
+++ b/.github/workflows/lighthouse-ci.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1'
+          bun-version: latest
 
       - name: Add CNAME file
         run: echo "christophercarrollsmith.com" > ./public/CNAME
