--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@astrojs/check": "^0.9.5",
     "@astrojs/sitemap": "^3.6.0",
+    "@citation-js/core": "^0.7.21",
+    "@citation-js/plugin-csl": "^0.7.21",
     "@formspree/react": "^2.5.1",
     "@fullcalendar/core": "^6.1.19",
     "@fullcalendar/list": "^6.1.19",
@@ -50,6 +52,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "gh-pages": "^5.0.0",
+    "json-schema-to-typescript": "^15.0.4",
     "pixelmatch": "^7.1.0",
     "playwright": "^1.56.1",
     "pngjs": "^7.0.0",
