--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.astro",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx,.astro --fix",
     "test": "playwright test",
+    "test:a11y": "playwright test tests/cv-a11y.spec.ts",
     "test:headed": "playwright test --headed",
     "test:ui": "playwright test --ui",
     "lighthouse": "bun run build && lhci autorun --config=./lighthouserc.json"
@@ -37,6 +38,8 @@
     "@astrojs/react": "^4.4.1",
     "@lhci/cli": "^0.14.0",
     "@playwright/test": "^1.56.1",
+    "@axe-core/playwright": "^4.10.0",
+    "axe-core": "^4.10.0",
     "@types/node": "^24.10.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
