New custom events component

--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "@citation-js/core": "^0.7.21",
     "@citation-js/plugin-csl": "^0.7.21",
     "@formspree/react": "^2.5.1",
-    "@fullcalendar/core": "^6.1.19",
-    "@fullcalendar/list": "^6.1.19",
+    "date-fns": "^4.1.0",
     "convertkit-react": "^1.5.5",
     "image-size": "^2.0.2",
     "prismjs": "^1.30.0",
