Resolve astro check failure

--- a/.github/workflows/lighthouse-ci.yml
+++ b/.github/workflows/lighthouse-ci.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Install dependencies
         run: bun install
 
-      - name: Build site
-        run: bun run build
+      - name: Lint, test, and build site
+        run: bun run check
 
       - name: Run Lighthouse CI
         uses: treosh/lighthouse-ci-action@v12
