Resolve astro check failure

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:headed": "playwright test --headed",
     "test:ui": "playwright test --ui",
     "test:e2e": "bun run test && bun run test:a11y",
-    "check": "bun run lint && bun run test:e2e && astro check && astro build",
+    "check": "bun run lint && astro check && astro build && bun run test:e2e",
     "lighthouse": "bun run build && lhci autorun --config=./lighthouserc.json"
   },
   "dependencies": {
