--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "scripts": {
     "dev": "astro dev",
-    "build": "astro check && astro build",
+    "generate:pdf": "bun scripts/generate-cv-pdf.ts",
+    "build": "bun run generate:pdf && astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.astro",
@@ -25,15 +26,18 @@
     "@astrojs/sitemap": "^3.6.0",
     "@citation-js/core": "^0.7.21",
     "@citation-js/plugin-csl": "^0.7.21",
+    "@fontsource/roboto": "^5.2.9",
     "@formspree/react": "^2.5.1",
     "convertkit-react": "^1.5.5",
     "date-fns": "^4.1.0",
     "image-size": "^2.0.2",
+    "pdfmake": "^0.2.20",
     "prismjs": "^1.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "roboto-fontface": "^0.10.0"
   },
   "devDependencies": {
     "@astrojs/react": "^4.4.1",
@@ -41,6 +45,7 @@
     "@lhci/cli": "^0.14.0",
     "@playwright/test": "^1.56.1",
     "@types/node": "^24.10.0",
+    "@types/pdfmake": "^0.2.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
