--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "astro dev",
     "generate:pdf": "bun scripts/generate-cv-pdf.ts",
     "sync:substack": "bun scripts/sync-substack.ts",
-    "build": "bun run sync:substack && bun run generate:pdf && astro check && astro build",
+    "sync:youtube": "bun scripts/sync-youtube.ts",
+    "build": "bun run sync:substack && bun run sync:youtube && bun run generate:pdf && astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.astro",
